Fix: prevent unwanted horizontal scrolling by setting body { overflow-x: hidden }

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,7 @@ body {
   color: $color-text;
   background: $color-bg;
   overflow: visible;
+  overflow-x: hidden;
   direction: ltr;
 }
 
